--- a/english.html
+++ b/english.html
@@ -577,7 +577,9 @@ Error message and password prompt
 
 <li>Stories I`ve told Norma</li>
 
-<li>Tel Aviv Editorial</li>
+<li>Technical director</li>
+
+<li>Tel Aviv Desk</li>
 
 <li>The archive's trustees</li>
 
@@ -8533,7 +8535,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200218203555873" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219132051726" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8542,7 +8544,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Dandan [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]] Yoyo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8562,7 +8564,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219090334658" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219131404592" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8850,8 +8852,7 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 </pre>
 </div>
 <div created="20200218185443099" modified="20200218190918037" tags="[[Coen sister]]" title="Anna">
-<pre>
-[img[pictures/JcnhaFI7DwaT9664.jpg]]
+<pre>[img[pictures/JcnhaFI7DwaT9664.jpg]]
 
 !!![[Yoyo]]:
 
@@ -9507,20 +9508,20 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 
 </pre>
 </div>
-<div created="20200202161830591" modified="20200218192941884" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
+<div created="20200202161830591" modified="20200219130028956" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[Yoyo]]:
 
 Gura my sister is a babe in denial/Pippi Longstocking.
 
-She's the love of my life/pride joy and I'll guard her forever.
+She's the love of my life and I'll guard her forever.
 
-I found this picture thrown in the garbage can near the dryer. Yes, she told me that for several days she has been [[trying to draw herself|Life is not About Talking]], but she's not succeeding.
+I found this picture thrown in the garbage can near the dryer. Yes, she told me that for several days she has been [[trying to draw herself|Life is not About Talking]], but she hasn't succeeded.
  
 She's the youngest daughter of my parents, [[Dina|RIP Dina]] may she rest in peace and [[Yoel|Papa Yoel]] may he live long and prosper, that gave birth to us five: [[Nadia]], [[Keren]], Me, [[Gigi]] and the Gura.
  
-After she got hurt she read and wrote all the time.
+After she got injured she read and wrote all the time.
 
 Also now, since I've opened this site, she hasn't stopped writing, filling and decorating and trying to act properly. 
 
@@ -9793,13 +9794,13 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
  &lt;&lt;heblink [[Jazz]]&gt;&gt;</pre>
 </div>
-<div created="20200215152111069" modified="20200217161203892" tags="[[Here in the Ghetto]] Mothers Metafiction TV" title="Jazz's mom">
+<div created="20200215152111069" modified="20200219131907075" tags="[[Here in the Ghetto]] Mothers Metafiction TV" title="Jazz's mom">
 <pre>[img[pictures/ima-shel-jazz.jpg]]
 
 
 !!![[Tomer]]:
 
-It's funny but just not so long ago I found out that [[Jazz's|Jazz]] mother used to work with me at the [[Television|Tel Aviv Editorial]].
+It's funny but just not so long ago I found out that [[Jazz's|Jazz]] mother used to work with me at the [[Television|Tel Aviv Desk]].
 
 
 
@@ -9885,16 +9886,14 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
 </pre>
 </div>
 <div created="20200218193250690" modified="20200218193352875" tags="[[The Baumans]]" title="Keren">
-<pre>
-[img[pictures/keren.jpg]]
+<pre>[img[pictures/keren.jpg]]
 
 
  &lt;&lt;heblink [[קרן]]&gt;&gt;
 </pre>
 </div>
 <div created="20200218195056718" modified="20200218195401760" tags="[[A friend]]" title="Key board">
-<pre>
-[img[pictures/mikledet.jpg]]
+<pre>[img[pictures/mikledet.jpg]]
 
 !!![[Gura]]:
 ''
@@ -9995,7 +9994,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200218204017716" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200219131230385" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10229,8 +10228,7 @@ It is true that my brother abandoned his guarding position on me – his younger
  &lt;&lt;heblink [[אהרון אחי השלם]]&gt;&gt;</pre>
 </div>
 <div created="20200218193037453" modified="20200218194548616" tags="[[The Baumans]]" title="Nadia">
-<pre>
-[img[pictures/nDjOjcd5qoNrHdfU.jpg]]
+<pre>[img[pictures/nDjOjcd5qoNrHdfU.jpg]]
 
 
 !!![[Yoyo]]:
@@ -10309,12 +10307,12 @@ Odelia is a K sister who trades art. She dresses super stylish, knows tantra, su
 
 </pre>
 </div>
-<div created="20200217152050036" modified="20200217161226311" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction" title="On the way to Sarona">
+<div created="20200217152050036" modified="20200219132039540" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction" title="On the way to Sarona">
 <pre>[img[pictures/baderech-lesarona.jpg]]
 
 !!![[Tomer]]:
 
-Last week I went to meet a friend at [[Sarona|http://www.saronatlv.co.il/]], and on the passage from Haarbaah Street this is what I saw (the buildings on the middle are the [[Editorial RIP|Tel Aviv Editorial]])
+Last week I went to meet a friend at [[Sarona|http://www.saronatlv.co.il/]], and on the passage from Haarbaah Street this is what I saw (the buildings on the middle are the [[Desk RIP|Tel Aviv Desk]])
 
  &lt;&lt;heblink [[בדרך לשרונה]]&gt;&gt;
 </pre>
@@ -10424,8 +10422,7 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
  &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
 </div>
 <div created="20200218184450279" modified="20200218185300723" tags="[[Outer sisters]] Films" title="Philip Seymour Hoffman">
-<pre>
-[img[pictures/Philip-Seymour-Hoffman.jpg]]
+<pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
 
 !!![[Yoyo]]:
 
@@ -10615,8 +10612,7 @@ Though, therapy speaking, I'm covered in every direction, only recently after [[
  &lt;&lt;heblink [[דינה זכרה לברכה]]&gt;&gt;</pre>
 </div>
 <div created="20200218190952659" modified="20200218191053045" tags="[[Coen sister]]" title="Roje">
-<pre>
-[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
+<pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
 
 
  &lt;&lt;heblink [[רוז'ה]]&gt;&gt;</pre>
@@ -10756,8 +10752,7 @@ And I say:
 </pre>
 </div>
 <div created="20200218202232757" modified="20200218205624549" tags="[[Outer sisters]] Films [[The Sopranos]] TV [[TV Series]]" title="Steve Buscemi">
-<pre>
-[img[pictures/steve-buscemi.jpg]]
+<pre>[img[pictures/steve-buscemi.jpg]]
 
 
 !!![[Yoyo]]:
@@ -10783,13 +10778,27 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
 
 </pre>
 </div>
-<div created="20200217151145172" modified="20200217161018161" tags="[[Here in the Ghetto]] Metafiction" title="Tel Aviv Editorial">
+<div created="20200219131041061" modified="20200219131244245" tags="TV [[Here in the Ghetto]] [[True stories]]" title="Technical director">
+<pre>
+[img[pictures/natav.jpg]]
+
+
+
+ &lt;&lt;heblink [[נתב]]&gt;&gt;
+
+
+
+
+
+</pre>
+</div>
+<div created="20200217151145172" modified="20200219131838576" tags="[[Here in the Ghetto]] Metafiction" title="Tel Aviv Desk">
 <pre>[img[pictures/maarechet-tel-aviv.jpg]]
 
 
 !!![[Tomer]]:
 
-When I was a student, I used to work as a security guard at the Editorial's yard. A wonderful garden that looked like an old village full of trees and short houses, some for preservation, who was located near [[Sarona|On the way to Sarona]].  Sometimes when there was anecessity I went up to work at [[Romema]], and pretty fast I got familiar (like any other guard) with the * staff. Meanwhile, the one that was in charge of the studio employs offered me to work as a cg, the one who writes the headlines, the captions and the credits that are on the screen. Later, they offered me to be a *, and that's how I spent nine years of my life in a pretty good studio job, until they shut us down at once, in the middle of May  2017. It was disrespectful. The photo which Gura's painting is based on, was taken by me last year behind the fence, on my way to sign at the employment bureau.
+When I was a student, I used to work as a security guard at the Editorial's yard. A wonderful garden that looked like an old village full of trees and short houses, some for preservation, who was located near [[Sarona|On the way to Sarona]].  Sometimes when there was anecessity I went up to work at [[Romema]], and pretty fast I got familiar (like any other guard) with the desk staff. Meanwhile, the one that was in charge of the studio employs offered me to work as a cg, the one who writes the headlines, the captions and the credits that are on the screen. Later, they offered me to be a [[Technical director]], and that's how I spent nine years of my life in a pretty good studio job, until they shut us down at once, in the middle of May  2017. It was disrespectful. The photo which Gura's painting is based on, was taken by me last year behind the fence, on my way to sign at the employment bureau.
 
 
 
@@ -11356,7 +11365,7 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
  &lt;&lt;heblink [[יהונתן גפן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200101132642919" modified="20200215220155985" tags="" title="Yoyo">
+<div created="20200101132642919" modified="20200219124006769" tags="" title="Yoyo">
 <pre>[img[pictures/yoyo.jpg]]
 
  !!![[Iry]]:
