--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סטיב בושמי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מערכת תל אביב]] נתב [[איתן וג'ואל כהן]] המעבדה אלפרד הכתיבה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218202501323" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219131550354" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9611,7 +9611,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200218202645587" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200219131305326" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15442,7 +15442,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקצה החלל הפתוח יש חדר אוכל צבעוני, גם בו נוהגים העובדים לשבת ולעבוד.</pre>
 </div>
-<div created="20181026164355462" modified="20200217162223203" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
+<div created="20181026164355462" modified="20200219131813762" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
 <pre>[img[pictures/maarechet-tel-aviv.jpg]]
 
 !!![[תומר]]:
@@ -15450,7 +15450,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כשהייתי סטודנט, עבדתי כמאבטח בחצר המערכת. חצר נפלאה שנראית כמו קיבוץ ישן מלא עצים ובתים נמוכים חלקם לשימור, וממוקמת סמוך [[לשרונה|בדרך לשרונה]]. לפעמים כשהיה צורך עליתי לעבוד [[ברוממה|רוממה]], ודי מהר היכרתי, (כמו כל המאבטחים), את עובדי הרשות מקטן ועד גדול. מפה לשם מי שהיה אחראי על עובדי האולפן הציע לי לעבוד כ cg, שזה אותו אחד שכותב את הכותרות והכיתובים והקרדיטים שנראים על המסך. בהמשך הציעו לי להיות [[נתב]], וכך העברתי תשע שנים מחיי בעבודת אולפן לא רעה בכלל - עד שסגרו עלינו את המסך באיבחה באמצע מאי 2017. היה לא מכבד. את הצילום ממנו ציירה גורה צילמתי בשנה שעברה מאחורי הגדר בדרכי לחתום בלשכת התעסוקה.
 
 
-&lt;&lt;englink [[Tel Aviv Editorial]]&gt;&gt;</pre>
+&lt;&lt;englink [[Tel Aviv Desk]]&gt;&gt;</pre>
 </div>
 <div created="20170422190532804" modified="20190617134421789" tags="[[חלומות שחלמנו]] מטבחים" title="מפעיל יד">
 <pre>[img[pictures/mafil-yad.jpg]]
@@ -15839,14 +15839,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181025181017484" modified="20190311191341564" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] טלוויזיה" title="נתב">
+<div created="20181025181017484" modified="20200219131330036" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] טלוויזיה" title="נתב">
 <pre>[img[pictures/natav.jpg]]
 
 !!![[תומר]]:
 
 עד לפני שנה וחצי כמעט, זה מה שהייתי - נתב תמונה [[בטלוויזיה|מערכת תל אביב]]. כלומר זה שלפי הוראות הבמאי מעלה את תמונת המצלמה המבוקשת, הכותרות, בחלונות, קטעי הוידאו... אני אוהב את הישיבה המרוכזת והשקטה בשידור חי אצל הקונסולה מול המסכים בקונטרול הגועש והקר כזיכרון מתוק.
 
-</pre>
+
+
+&lt;&lt;englink [[Technical director]]&gt;&gt;</pre>
 </div>
 <div created="20170629191152497" modified="20200215174738961" tags="[[משפחת באומן]] בתים" title="סבתא שלנו">
 <pre>[img[pictures/savta-shelanu.jpg]]
