--- a/english.html
+++ b/english.html
@@ -283,6 +283,8 @@ Error message and password prompt
 
 <li>Berry Sakharof</li>
 
+<li>Beta VeGriga</li>
+
 <li>bg</li>
 
 <li>Bishvil Haprachim</li>
@@ -383,6 +385,8 @@ Error message and password prompt
 
 <li>HaAchim</li>
 
+<li>Hamigdalor</li>
+
 <li>Hanna our mother</li>
 
 <li>Harry Dean Stanton</li>
@@ -455,6 +459,8 @@ Error message and password prompt
 
 <li>Less is more</li>
 
+<li>Life is for those who can't deal with drugs</li>
+
 <li>Life is not About Talking</li>
 
 <li>logo-bg</li>
@@ -516,6 +522,8 @@ Error message and password prompt
 <li>Papa Yoel</li>
 
 <li>Passover Seder at Dad's and Tirza's</li>
+
+<li>Peacock</li>
 
 <li>Pedro Almodóvar</li>
 
@@ -611,7 +619,7 @@ Error message and password prompt
 
 <li>The hierarchy in the refrigerator</li>
 
-<li>The kitchen according to Genevieve</li>
+<li>The kitchen by Genevieve</li>
 
 <li>The lab</li>
 
@@ -8532,10 +8540,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219132051726" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219153500705" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8564,7 +8572,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219131404592" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219152202631" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8724,10 +8732,13 @@ It isn't nice to see a shutdown radio station, but when you live here in the ghe
 
 </pre>
 </div>
-<div created="20200217141431467" modified="20200217142025766" tags="Music [[Here in the Ghetto]] [[A friend]]" title="420">
+<div created="20200217141431467" modified="20200219145333630" tags="Music [[Here in the Ghetto]] [[A friend]]" title="420">
 <pre>[img[pictures/420.jpg]]
 
-[[Rastafrequency|https://www.rastafrequency.co.il/420-shop-tel-aviv-2/]]
+!!![[Tomer]]:
+
+[[The Rasta Frequency|https://www.rastafrequency.co.il/420-shop-tel-aviv/]] is what you hear, and 420 is the small insane brand shop. It's at 30 King George St and 2 Borochov St, and it's part of the working ensemble of these people, which I really like. There is tobacco and smoking instruments but also other items, and I always like buying there a colorful wood Africa necklace or some nice purse for the [[flower|Gan-Ya]], or something else that's nice, and talk with the salesman. 
+
 
  &lt;&lt;heblink [[420]]&gt;&gt;</pre>
 </div>
@@ -8905,6 +8916,20 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[ברי סחרוף]]&gt;&gt;
  
+</pre>
+</div>
+<div created="20200219150535524" modified="20200219152234931" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] Metafiction Restaurants" title="Beta VeGriga">
+<pre>
+[img[pictures/beta-ve-grega.jpg]]
+
+!!![[Tomer]]:
+
+[[Beta Ve Griga|https://www.haaretz.co.il/gallery/night-life/bars/location-1.3446197]], it's like all the nannies in the area gathered together, and agreed who will make what, and that's how we'll sit at 2 Levontin St, [[glutton Nano|Nano and I]] and I, at the corner of Levontin and Alenby, in front of [[Hamigdalor]], and we'll eat a sandwich, and a sliced cucumber with thick sea salt, and couscous with soup, and a yummy mint drink, and a semolina cake, and a strong small cappuccino, and a cookie, and it will be tasty, and we'll have fun, and we'll laugh, and we'll finnish, and we'll pay really not that much, and I'll put the cutie in the stroller, and we'll go along Levontin St. It's already evening and we'll go home.
+
+
+ &lt;&lt;heblink [[בתה וגריגה]]&gt;&gt;
+
+
 </pre>
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
@@ -9157,7 +9182,7 @@ Be good.
 
  &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
 </div>
-<div created="20200213155644547" modified="20200217202816662" tags="[[Food addicts]] [[Coffee shops]] [[The kitchen according to Genevieve]] Coffee" title="Coffee">
+<div created="20200213155644547" modified="20200219132826927" tags="[[Food addicts]] [[Coffee shops]] Coffee [[The kitchen by Genevieve]]" title="Coffee">
 <pre>[img[pictures/coffee.jpg]]
 
 
@@ -9295,7 +9320,7 @@ This is [[David Byrne|http://davidbyrne.com/]].
 
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
 </div>
-<div created="20200215113637898" modified="20200215113839589" tags="Meals Coffee [[Coffee shops]] [[The kitchen according to Genevieve]] Restaurants" title="Delicatessen Chez Genevieve">
+<div created="20200215113637898" modified="20200219133116379" tags="Meals Coffee [[Coffee shops]] Restaurants [[The kitchen by Genevieve]]" title="Delicatessen Chez Genevieve">
 <pre>[img[pictures/delicatessen.jpg]]
 
 
@@ -9430,15 +9455,31 @@ Need a document? Need to send a fax? Need a business card? Need to scan? Need a 
  &lt;&lt;heblink [[גלסי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215210632854" modified="20200215210740484" tags="[[On the road to somewhere]] [[A friend]] [[The archive's trustees]]" title="Gan-Ya">
+<div created="20200215210632854" modified="20200219150106439" tags="[[On the road to somewhere]] [[A friend]] [[The archive's trustees]]" title="Gan-Ya">
 <pre>[img[pictures/gan-ya.jpg]]
+
+!!![[Yoyo]]:
+
+In the [[Rastafari's|https://en.wikipedia.org/wiki/Rastafari]] language ganja is the wonder planet. Jah is god
+
+Meaning, yah.
+
+It seems like simple logic to me that the origins of this planet is [[gan-yah|https://en.wikipedia.org/wiki/Heaven]], 
+
+and thank you lord for this gift.
+
+Or as Alfred used to say:
+
+[[Life is for those who can't deal with drugs]]. 
+
+
 
  &lt;&lt;heblink [[גן-יה]]&gt;&gt;
 
 
 </pre>
 </div>
-<div created="20200213145354960" modified="20200217195521735" tags="[[Coen sister]] Mothers [[The kitchen according to Genevieve]]" title="Genevieve">
+<div created="20200213145354960" modified="20200219133037858" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]]" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
 
 
@@ -9458,7 +9499,7 @@ They can mispresent, but a clever cat won't.
 
  She's a beautiful cat whose family emigrated from Morocco to Paris.
 
-She loves us and take care of us all. In the end of every working day she moves around and checks that everything is in order. Quickly she peeks at all corners even though she knows the rags in our hands won't miss a centimeter. And maybe, a thought suddenly pops into my head, she's just full of satisfaction, after she's down counting the cash, knowing [[she didn't study audit for nothing|The kitchen according to Genevieve]]. 
+She loves us and take care of us all. In the end of every working day she moves around and checks that everything is in order. Quickly she peeks at all corners even though she knows the rags in our hands won't miss a centimeter. And maybe, a thought suddenly pops into my head, she's just full of satisfaction, after she's down counting the cash, knowing [[she didn't study audit for nothing|The kitchen by Genevieve]]. 
 
 
 
@@ -9561,6 +9602,19 @@ Also now, since I've opened this site, she hasn't stopped writing, filling and d
 
 </pre>
 </div>
+<div created="20200219153430591" modified="20200219153624258" tags="[[Here in the Ghetto]] Metafiction [[True stories]]" title="Hamigdalor">
+<pre>
+[img[pictures/hamigdalor.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[המגדלור]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20200217165254118" modified="20200217175255085" tags="[[The estate]]" title="Hanna our mother">
 <pre>[img[pictures/chana-imenu.jpg]]
 
@@ -9585,8 +9639,14 @@ Here in the picture are Hanna my mother and I, few months before she passed away
  &lt;&lt;heblink [[הארי דין סטנטון]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212164615918" modified="20200217121701733" tags="Metafiction [[Outer sisters]] [[The global village]]" title="Here in the Ghetto">
+<div created="20200212164615918" modified="20200219150430746" tags="Metafiction [[Outer sisters]] [[The global village]]" title="Here in the Ghetto">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
+
+
+!!![[Tomer]]:
+
+The only thing that I'm missing here [[in the ghetto|https://www.youtube.com/watch?v=2Ox1Tore9nw]] is a proper vegetables shop, in order to buy good fruits and vegetables I am forced to get out of my comfort zone and walk all the way to [[Shenkin|Shoretzky]]. 
+
 
 
 &lt;&lt;list-links filter:&quot;[tag[Here in the Ghetto]]&quot;&gt;&gt;
@@ -9949,7 +10009,7 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
 
 </pre>
 </div>
-<div created="20200215225741395" modified="20200217194325549" tags="Kitchens [[Life according to Genevieve]]" title="Less is more">
+<div created="20200215225741395" modified="20200219132954190" tags="Kitchens [[The kitchen by Genevieve]]" title="Less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
 !!![[Genevieve]]:
@@ -9974,6 +10034,13 @@ Bottom line is, if you're standing in front of whatever it is and hesitating, wo
 
 </pre>
 </div>
+<div created="20200219153806611" modified="20200219154028814" title="Life is for those who can't deal with drugs">
+<pre>
+[img[pictures/hachaim-noadoo.gif]]
+
+
+ &lt;&lt;heblink [[החיים נועדו למי שלא יכול להתמודד עם סמים]]&gt;&gt;</pre>
+</div>
 <div created="20200215171950007" modified="20200215172608187" tags="[[True stories]] [[On the road to somewhere]]" title="Life is not About Talking">
 <pre>[img[pictures/hachaim-ze-lo.jpg]]
 
@@ -9994,7 +10061,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200219131230385" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200219154005568" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10026,7 +10093,7 @@ For example, it seethes me when people use words purposelessly, like the word lo
  &lt;&lt;heblink [[מריאן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200217205455825" modified="20200217215926258" tags="[[The kitchen according to Genevieve]] Coffee Kitchens [[Food addicts]]" title="Materials">
+<div created="20200217205455825" modified="20200219133401376" tags="Coffee Kitchens [[Food addicts]] [[The kitchen by Genevieve]]" title="Materials">
 <pre>[img[pictures/chomarim.jpg]]
 
 !!![[Genevieve]]:
@@ -10131,7 +10198,7 @@ I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fel
 
 </pre>
 </div>
-<div created="20200217134428443" modified="20200217134554888" tags="Kitchens [[The kitchen according to Genevieve]] [[Monkeys with car keys]] Laundry" title="Misenplation">
+<div created="20200217134428443" modified="20200219133440077" tags="Kitchens [[Monkeys with car keys]] Laundry [[The kitchen by Genevieve]]" title="Misenplation">
 <pre>[img[pictures/mizonplazya.jpg]]
 
 
@@ -10395,6 +10462,24 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 
 
  &lt;&lt;heblink [[ליל הסדר אצל אבא ותרצה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200219133655778" modified="20200219142218006" tags="[[Here in the Ghetto]] Restaurants" title="Peacock">
+<pre>
+[img[pictures/peacock.jpg]]
+
+!!![[Tomer]]:
+
+Here, in the beloved ghetto, up on Marmorek St, lays the [[Peacock|https://peacock.rest.co.il/]], the best bar that opens at 6pm, an hour that I am a father to a baby for some time now, and after that I'm very tired of the up coming tomorrow, but when I go- I go to the Peacock. 
+
+
+ &lt;&lt;heblink [[פיקוק]]&gt;&gt;
+
+
+
+
+
+
 </pre>
 </div>
 <div created="20200215104941835" modified="20200215105450147" tags="Mothers Films [[Outer sisters]]" title="Pedro Almodóvar">
@@ -10662,7 +10747,7 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
  &lt;&lt;heblink [[ריחות]]&gt;&gt;</pre>
 </div>
-<div created="20200217142305955" modified="20200217143014956" tags="[[Here in the Ghetto]] [[Food addicts]]" title="Shoretzky">
+<div created="20200217142305955" modified="20200219150409219" tags="[[Here in the Ghetto]] [[Food addicts]]" title="Shoretzky">
 <pre>[img[pictures/shorezky.jpg]]
 
 !!![[Tomer]]:
@@ -10863,7 +10948,7 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 </pre>
 </div>
-<div created="20200215114029313" modified="20200215114214451" tags="Restaurants Meals [[Food addicts]] Kitchens [[The kitchen according to Genevieve]]" title="The Couscous">
+<div created="20200215114029313" modified="20200219133323412" tags="Restaurants Meals [[Food addicts]] Kitchens [[The kitchen by Genevieve]]" title="The Couscous">
 <pre>[img[pictures/hacouscous.jpg]]
 
 
@@ -10872,7 +10957,7 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 </pre>
 </div>
-<div created="20200217194809275" modified="20200217195503430" tags="Coffee [[Coffee shops]] [[The kitchen according to Genevieve]] Kitchens Houses" title="The cups we're drinking from">
+<div created="20200217194809275" modified="20200219133229147" tags="Coffee [[Coffee shops]] Kitchens Houses [[The kitchen by Genevieve]]" title="The cups we're drinking from">
 <pre>[img[pictures/sifley-cafe.jpg]]
 
 !!![[Genevieve]]:
@@ -10983,7 +11068,7 @@ The grass after rain, is greenish green.
  &lt;&lt;heblink [[הדשא]]&gt;&gt;
 </pre>
 </div>
-<div created="20200217200909473" modified="20200217220150111" tags="[[The kitchen according to Genevieve]] Kitchens" title="The hierarchy in the refrigerator">
+<div created="20200217200909473" modified="20200219133149839" tags="Kitchens [[The kitchen by Genevieve]]" title="The hierarchy in the refrigerator">
 <pre>[img[pictures/bamekarer.jpg]]
 
 
@@ -11004,10 +11089,10 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
 </pre>
 </div>
-<div created="20200213161521882" modified="20200217194459727" tags="Meals Kitchens Recipes" title="The kitchen according to Genevieve">
+<div created="20200213161521882" modified="20200219133510338" tags="Meals Kitchens Recipes" title="The kitchen by Genevieve">
 <pre>[img[pictures/genevieve-food.jpg]]
 
-&lt;&lt;list-links filter:&quot;[tag[The kitchen according to Genevieve]]&quot;&gt;&gt;
+&lt;&lt;list-links filter:&quot;[tag[The kitchen by Genevieve]]&quot;&gt;&gt;
 
 &lt;&lt;heblink [[המטבח על פי ז'נבייב]]&gt;&gt;
 
