--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217150815393" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217204519749" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219133714845" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מערכת תל אביב]] נתב [[איתן וג'ואל כהן]] המעבדה אלפרד הכתיבה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219131550354" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219153845653" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9352,7 +9352,7 @@ a.translation:hover { text-decoration: underline }
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
-<div created="20180802192842799" modified="20200217141632894" tags="[[כאן בגטו]] מוזיקה חבר" title="420">
+<div created="20180802192842799" modified="20200219145111802" tags="[[כאן בגטו]] מוזיקה חבר" title="420">
 <pre>[img[pictures/420.jpg]]
 
 !!![[תומר]]:
@@ -9611,7 +9611,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200219131305326" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200219153902761" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10861,15 +10861,15 @@ Is where I want to be
 
 אחרי [[הלחמניה|לחם תושיה שינקין]], אחרי [[שורצקי]], אחרי [[שרלי|שיח קפה]], אנחנו עולים חזרה לשדרה, תיכף נפנה ימינה לחשמונאים, והנה מגיעים.</pre>
 </div>
-<div created="20190227173320579" modified="20190415190540068" tags="[[כאן בגטו]] מסעדות [[מטא בדיון]] קפה [[בתי קפה]]" title="בתה וגריגה">
+<div created="20190227173320579" modified="20200219152008061" tags="[[כאן בגטו]] מסעדות [[מטא בדיון]] קפה [[בתי קפה]]" title="בתה וגריגה">
 <pre>[img[pictures/beta-ve-grega.jpg]]
 
 !!![[תומר]]: 
 
-[[בתה וגריגה|https://www.haaretz.co.il/gallery/night-life/bars/location-1.3446197]], זה כאילו שסבתות כל האזור התכנסו, סיכמו מי מהן תכין מה, וככה נשב בלבונטין 2, [[ננו האכלנית|ננו שלי ואני]] ואני בפינת לבונטין ואלנבי, מול [[המגדלור]], ונאכל כריך, ומלפפון חתוך עם מלח גס, וקוסקוס עם מרק, ומשקה מנטה יאמי, ובסבוסה, והפוך קטן חזק, ועוגיה, ויהיה לנו טעים, ונהנה, ונצחק, ונסיים, ונשלם ממש לא הרבה, ואני אכניס את המתוקה לעגלה, ונעלה במעלה לבונטין. כבר ערב ונחזור הביתה.
+[[בתה וגריגה|https://www.haaretz.co.il/gallery/night-life/bars/location-1.3446197]], זה כאילו שסבתות כל האזור התכנסו, סיכמו מי מהן תכין מה, וככה נשב בלבונטין 2, [[ננו הגרגרנית|ננו שלי ואני]] ואני בפינת לבונטין ואלנבי, מול [[המגדלור]], ונאכל כריך, ומלפפון חתוך עם מלח גס, וקוסקוס עם מרק, ומשקה מנטה יאמי, ובסבוסה, והפוך קטן חזק, ועוגיה, ויהיה לנו טעים, ונהנה, ונצחק, ונסיים, ונשלם ממש לא הרבה, ואני אכניס את המתוקה לעגלה, ונעלה במעלה לבונטין. כבר ערב ונחזור הביתה.
 
 
-</pre>
+&lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
 <div created="20190415190001072" modified="20200213161413930" tags="קפה [[חיות אוכל]] [[מטא בדיון]]" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
@@ -12361,7 +12361,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Life is not About Talking]]&gt;&gt;
 </pre>
 </div>
-<div created="20170225123850883" modified="20180430154009988" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
+<div created="20170225123850883" modified="20200219153934205" tags="[[קופים ממונעים]] [[סיפורים אמיתיים]]" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
 <pre>[img[pictures/hachaim-noadoo.gif]]
 
 (את הgif עשה [[הדוד|הדוד האמיתי]])
@@ -12388,7 +12388,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 
-
+&lt;&lt;englink [[Life is for those who can't deal with drugs]]&gt;&gt;
 
 
 
@@ -12485,14 +12485,17 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20190210161447471" modified="20190210162622963" tags="[[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="המגדלור">
+<div created="20190210161447471" modified="20200219153717011" tags="[[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="המגדלור">
 <pre>[img[pictures/hamigdalor.jpg]]
 
 !!![[תומר]]:
 
-בימי החורף האלה, בשעות אחר הצהריים, אני לא פעם צועד עם [[ננו הקטנה|ננו שלי ואני]]  ללבונטין 1 ואנחנו נכנסים [[למגדלור|https://www.hamigdalor.co.il/]] מלאת הפיתויים.</pre>
+בימי החורף האלה, בשעות אחר הצהריים, אני לא פעם צועד עם [[ננו הקטנה|ננו שלי ואני]]  ללבונטין 1 ואנחנו נכנסים [[למגדלור|https://www.hamigdalor.co.il/]] מלאת הפיתויים.
+
+
+&lt;&lt;englink [[Hamigdalor]]&gt;&gt;</pre>
 </div>
-<div created="20170422140632892" modified="20200217194518827" tags="ארוחות מתכונים מטבחים" title="המטבח על פי ז'נבייב">
+<div created="20170422140632892" modified="20200219132925202" tags="ארוחות מתכונים מטבחים" title="המטבח על פי ז'נבייב">
 <pre>[img[pictures/genevieve-food.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12507,7 +12510,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 
-&lt;&lt;englink [[The kitchen according to Genevieve]]&gt;&gt;
+&lt;&lt;englink [[The kitchen by Genevieve]]&gt;&gt;
 
 
 </pre>
@@ -17372,13 +17375,14 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Pina Bausch]]&gt;&gt;</pre>
 </div>
-<div created="20180719134829793" modified="20180722161334015" tags="[[כאן בגטו]] [[חיות אוכל]]" title="פיקוק">
+<div created="20180719134829793" modified="20200219141602225" tags="[[כאן בגטו]] [[חיות אוכל]]" title="פיקוק">
 <pre>[img[pictures/peacock.jpg]]
 
 !!![[תומר]]:
 
 כן, בגטו המיטיב, במעלה מרמורק, שוכן [[הפיקוק|http://peacock.rest.co.il/]], שהוא בר הכי שווה, שנפתח בשש בערב, השעות בהן מזה כמה חודשים אני אבא לתינוקת, ואחר כך עייף מאד ממחר המתקרב, אך כשהולך - הולך לפיקוק.
 
+&lt;&lt;englink [[Peacock]]&gt;&gt;
 </pre>
 </div>
 <div created="20180408155155270" modified="20200212144511252" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="פלא אוזן">
