--- a/english.html
+++ b/english.html
@@ -8552,7 +8552,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]] Yoyo" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8572,7 +8572,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219152202631" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219155821954" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8919,8 +8919,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 </pre>
 </div>
 <div created="20200219150535524" modified="20200219152234931" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] Metafiction Restaurants" title="Beta VeGriga">
-<pre>
-[img[pictures/beta-ve-grega.jpg]]
+<pre>[img[pictures/beta-ve-grega.jpg]]
 
 !!![[Tomer]]:
 
@@ -9602,9 +9601,12 @@ Also now, since I've opened this site, she hasn't stopped writing, filling and d
 
 </pre>
 </div>
-<div created="20200219153430591" modified="20200219153624258" tags="[[Here in the Ghetto]] Metafiction [[True stories]]" title="Hamigdalor">
-<pre>
-[img[pictures/hamigdalor.jpg]]
+<div created="20200219153430591" modified="20200219155859878" tags="[[Here in the Ghetto]] Metafiction [[True stories]]" title="Hamigdalor">
+<pre>[img[pictures/hamigdalor.jpg]]
+
+!!![[Tomer]]:
+
+On these winter days, at the afternoon, many times I walk with [[little Nano|Nano and I]] to 1 Levontin St. and get into the full of temptations [[Hamigdalor|https://www.hamigdalor.co.il/]].
 
 
 
@@ -10035,8 +10037,7 @@ Bottom line is, if you're standing in front of whatever it is and hesitating, wo
 </pre>
 </div>
 <div created="20200219153806611" modified="20200219154028814" title="Life is for those who can't deal with drugs">
-<pre>
-[img[pictures/hachaim-noadoo.gif]]
+<pre>[img[pictures/hachaim-noadoo.gif]]
 
 
  &lt;&lt;heblink [[החיים נועדו למי שלא יכול להתמודד עם סמים]]&gt;&gt;</pre>
@@ -10465,8 +10466,7 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 </pre>
 </div>
 <div created="20200219133655778" modified="20200219142218006" tags="[[Here in the Ghetto]] Restaurants" title="Peacock">
-<pre>
-[img[pictures/peacock.jpg]]
+<pre>[img[pictures/peacock.jpg]]
 
 !!![[Tomer]]:
 
@@ -10864,8 +10864,7 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
 </pre>
 </div>
 <div created="20200219131041061" modified="20200219131244245" tags="TV [[Here in the Ghetto]] [[True stories]]" title="Technical director">
-<pre>
-[img[pictures/natav.jpg]]
+<pre>[img[pictures/natav.jpg]]
 
 
 
