--- a/english.html
+++ b/english.html
@@ -455,6 +455,8 @@ Error message and password prompt
 
 <li>Lauryn Hill</li>
 
+<li>Lehamim</li>
+
 <li>Lemon cookies</li>
 
 <li>Less is more</li>
@@ -591,6 +593,8 @@ Error message and password prompt
 
 <li>The archive's trustees</li>
 
+<li>The bartender</li>
+
 <li>The Baumans</li>
 
 <li>The Big Lebowski</li>
@@ -644,6 +648,8 @@ Error message and password prompt
 <li>They make an effort not to overdue</li>
 
 <li>They make peace</li>
+
+<li>TLV</li>
 
 <li>To draw</li>
 
@@ -8543,7 +8549,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219153500705" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219162425747" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8552,7 +8558,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Lehamim [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8572,7 +8578,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219155821954" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219162014243" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10003,6 +10009,22 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
  &lt;&lt;heblink [[לורין היל]]&gt;&gt;
 </pre>
 </div>
+<div created="20200219162401317" modified="20200219162549802" tags="[[Here in the Ghetto]] [[Coffee shops]] Restaurants Baking [[Food addicts]] Kitchens" title="Lehamim">
+<pre>
+[img[pictures/breads.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[לחמים]]&gt;&gt;
+
+
+
+
+
+</pre>
+</div>
 <div created="20200216144801309" modified="20200216145115733" tags="Recipes Baking [[Food addicts]]" title="Lemon cookies">
 <pre>[img[pictures/ugiyot-limon.jpg]]
 
@@ -10062,7 +10084,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200219154005568" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200219162535117" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10897,6 +10919,22 @@ When I was a student, I used to work as a security guard at the Editorial's yard
 
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
+<div created="20200219160048637" modified="20200219161134785" tags="HH Coffee" title="The bartender">
+<pre>
+[img[pictures/9q6T8aBMBF8FbdcN.JPG]]
+
+!!![[Gura]]:
+
+The youngest girl, is a bartender who juggles words and drinks, she mostly succeeds at not arousing resistance, even though at the beginng you wrong to think she's snobbish. She has a phenomenal memory. 
+
+Hobbies: the holocaust, soccer, final solutions, and vehicles with preference to 4X4. 
+She is the owner of an old green Ford pickup truck (the little machine).
+
+
+
+ &lt;&lt;heblink [[הברמנית]]&gt;&gt;
+</pre>
+</div>
 <div created="20200213165708457" modified="20200213165847313" tags="[[The archive's trustees]] [[True stories]] Houses" title="The Baumans">
 <pre>[img[pictures/baumans.jpg]]
 
@@ -11199,6 +11237,18 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
 
 
  &lt;&lt;heblink [[עושים שלום]]&gt;&gt;</pre>
+</div>
+<div created="20200219161330581" modified="20200219162258283" tags="[[Here in the Ghetto]] Houses" title="TLV">
+<pre>
+[img[pictures/tlv.jpg]]
+
+!!![[Tomer]]:
+
+The TLV is totally here in the ghetto, at the triangle between Ha Hashmonaim, Carlebach and Derech Menachem Begin, but I see it as the edge of a demilitarized lagoon, which you arrive to with a train, from it you can use the [[public transportation|Public Transportation]], or walk through the path that begins on Azrieli, rises through Tel Aviv Government Complex, continues through [[Saronna|On the way to Sarona]], passes through the hellish roads above the dug up holes for the upcoming buildings, crosses Ha Araba'a street to the passage through [[Givon Square|Lehamim]] - and here, all that left is crossing Ha Hashmonaim and go through the perfume cloud into the fashion mall, and you're there. 
+
+
+
+ &lt;&lt;heblink [[TLV]]&gt;&gt;</pre>
 </div>
 <div created="20200215225422814" modified="20200216150154177" tags="[[True stories]] Metafiction [[How many songs can you even invent at all]]" title="To draw">
 <pre>[img[pictures/lezayer.jpg]]
